--- a/share/man/man4/termios.4
+++ b/share/man/man4/termios.4
@@ -41,7 +41,8 @@ This describes a general terminal line discipline that is
 supported on tty asynchronous communication ports.
 .Ss Opening a Terminal Device File
 When a terminal file is opened, it normally causes the process to wait
-until a connection is established.  For most hardware, the presence
+until a connection is established.
+For most hardware, the presence
 of a connection is indicated by the assertion of the hardware
 .Dv CARRIER
 line.
@@ -65,7 +66,8 @@ an application's standard input, output, and error files.
 .Ss Job Control in a Nutshell
 Every process is associated with a particular process group and session.
 The grouping is hierarchical: every member of a particular process group is a
-member of the same session.  This structuring is used in managing groups
+member of the same session.
+This structuring is used in managing groups
 of related processes for purposes of
 .\" .Gw "job control" ;
 .Em "job control" ;
@@ -73,12 +75,16 @@ that is, the
 ability from the keyboard (or from program control) to simultaneously
 stop or restart
 a complex command (a command composed of one or more related
-processes).  The grouping into process groups allows delivering
+processes).
+The grouping into process groups allows delivering
 of signals that stop or start the group as a whole, along with
 arbitrating which process group has access to the single controlling
-terminal.  The grouping at a higher layer into sessions is to restrict
+terminal.
+The grouping at a higher layer into sessions is to restrict
 the job control related signals and system calls to within processes
-resulting from a particular instance of a "login".  Typically, a session
+resulting from a particular instance of a
+.Dq login .
+Typically, a session
 is created when a user logs in, and the login terminal is setup
 to be the controlling terminal; all processes spawned from that
 login shell are in the same session, and inherit the controlling
@@ -87,23 +93,31 @@ terminal.
 A job control shell
 operating interactively (that is, reading commands from a terminal)
 normally groups related processes together by placing them into the
-same process group.  A set of processes in the same process group
-is collectively referred to as a "job". When the foreground process
+same process group.
+A set of processes in the same process group is collectively referred to as a
+.Dq job .
+When the foreground process
 group of the terminal is the same as the process group of a particular
-job, that job is said to be in the "foreground".  When the process
-group of the terminal is different from the process group of
+job, that job is said to be in the
+.Dq foreground .
+When the process group of the terminal is different from the process group of
 a job (but is still the controlling terminal), that job is said
-to be in the "background".  Normally the
+to be in the
+.Dq background .
+Normally the
 shell reads a command and starts the job that implements that
-command.  If the command is to be started in the foreground (typical), it
+command.
+If the command is to be started in the foreground (typical), it
 sets the process group of the terminal to the process group
 of the started job, waits for the job to complete, and then
 sets the process group of the terminal back to its own process
-group (it puts itself into the foreground).  If the job is to
+group (it puts itself into the foreground).
+If the job is to
 be started in the background (as denoted by the shell operator "&"),
-it never changes the process group of the terminal and doesn't
+it never changes the process group of the terminal and does not
 wait for the job to complete (that is, it immediately attempts to read the next
-command).  If the job is started in the foreground, the user may
+command).
+If the job is started in the foreground, the user may
 type a key (usually
 .Ql \&^Z )
 which generates the terminal stop signal
@@ -116,20 +130,24 @@ and for placing stopped or background jobs into the foreground.
 .Ss Orphaned Process Groups
 An orphaned process group is a process group that has no process
 whose parent is in a different process group, yet is in the same
-session.  Conceptually it means a process group that doesn't have
-a parent that could do anything if it were to be stopped.  For example,
+session.
+Conceptually it means a process group that does not have
+a parent that could do anything if it were to be stopped.
+For example,
 the initial login shell is typically in an orphaned process group.
 Orphaned process groups are immune to keyboard generated stop
 signals and job control signals resulting from reads or writes to the
 controlling terminal.
 .Ss The Controlling Terminal
-A terminal may belong to a process as its controlling terminal.  Each
-process of a session that has a controlling terminal has the same
-controlling terminal.  A terminal may be the controlling terminal for at
-most one session.  The controlling terminal for a session is allocated by
+A terminal may belong to a process as its controlling terminal.
+Each process of a session that has a controlling terminal has the same
+controlling terminal.
+A terminal may be the controlling terminal for at most one session.
+The controlling terminal for a session is allocated by
 the session leader by issuing the
 .Dv TIOCSCTTY
-ioctl.  A controlling terminal
+ioctl.
+A controlling terminal
 is never acquired by merely opening a terminal device file.
 When a controlling terminal becomes
 associated with a session, its foreground process group is set to
@@ -137,7 +155,8 @@ the process group of the session leader.
 .Pp
 The controlling terminal is inherited by a child process during a
 .Xr fork 2
-function call.  A process relinquishes its controlling terminal when it
+function call.
+A process relinquishes its controlling terminal when it
 creates a new session with the
 .Xr setsid 2
 function; other processes
@@ -150,7 +169,8 @@ have it open.
 .Pp
 When a controlling process terminates, the controlling terminal is
 disassociated from the current session, allowing it to be acquired by a
-new session leader.  Subsequent access to the terminal by other processes
+new session leader.
+Subsequent access to the terminal by other processes
 in the earlier session will be denied, with attempts to access the
 terminal treated as if modem disconnect had been sensed.
 .Ss Terminal Access Control
@@ -163,7 +183,7 @@ causes a
 signal to be sent to
 the process's group
 unless one of the
-following special cases apply:  If the reading process is ignoring or
+following special cases apply: if the reading process is ignoring or
 blocking the
 .Dv SIGTTIN
 signal, or if the process group of the reading
@@ -174,7 +194,8 @@ returns -1 with
 set to
 .Er EIO
 and no
-signal is sent.  The default action of the
+signal is sent.
+The default action of the
 .Dv SIGTTIN
 signal is to stop the
 process to which it is sent.
@@ -184,7 +205,7 @@ terminal, write operations are allowed.
 Attempts by a process in a background process group to write to its
 controlling terminal will cause the process group to be sent a
 .Dv SIGTTOU
-signal unless one of the following special cases apply:  If
+signal unless one of the following special cases apply: if
 .Dv TOSTOP
 is not
 set, or if
@@ -193,7 +214,8 @@ is set and the process is ignoring or blocking the
 .Dv SIGTTOU
 signal, the process is allowed to write to the terminal and the
 .Dv SIGTTOU
-signal is not sent.  If
+signal is not sent.
+If
 .Dv TOSTOP
 is set, and the process group of
 the writing process is orphaned, and the writing process is not ignoring
@@ -219,10 +241,11 @@ A terminal device associated with a terminal device file may operate in
 full-duplex mode, so that data may arrive even while output is occurring.
 Each terminal device file has associated with it an input queue, into
 which incoming data is stored by the system before being read by a
-process.  The system imposes a limit,
+process.
+The system imposes a limit,
 .Pf \&{ Dv MAX_INPUT Ns \&} ,
-on the number of
-bytes that may be stored in the input queue.  The behavior of the system
+on the number of bytes that may be stored in the input queue.
+The behavior of the system
 when this limit is exceeded depends on the setting of the
 .Dv IMAXBEL
 flag in the termios
@@ -232,8 +255,8 @@ is sent an
 .Tn ASCII
 .Dv BEL
 character each time a character is received
-while the input queue is full.  Otherwise, the input queue is flushed
-upon receiving the character.
+while the input queue is full.
+Otherwise, the input queue is flushed upon receiving the character.
 .Pp
 Two general kinds of input processing are available, determined by
 whether the terminal device file is in canonical mode or noncanonical
@@ -243,10 +266,11 @@ input characters are processed according to the
 .Fa c_iflag
 and
 .Fa c_lflag
-fields.  Such processing can include echoing, which
+fields.
+Such processing can include echoing, which
 in general means transmitting input characters immediately back to the
-terminal when they are received from the terminal.  This is useful for
-terminals that can operate in full-duplex mode.
+terminal when they are received from the terminal.
+This is useful for terminals that can operate in full-duplex mode.
 .Pp
 The manner in which data is provided to a process reading from a terminal
 device file is dependent on whether the terminal device file is in
@@ -261,7 +285,8 @@ or
 If the
 .Dv O_NONBLOCK
 flag is clear, then the read request is
-blocked until data is available or a signal has been received.  If the
+blocked until data is available or a signal has been received.
+If the
 .Dv O_NONBLOCK
 flag is set, then the read request is completed, without
 blocking, in one of three ways:
@@ -285,23 +310,26 @@ When data is available depends on whether the input processing mode is
 canonical or noncanonical.
 .Ss Canonical Mode Input Processing
 In canonical mode input processing, terminal input is processed in units
-of lines.  A line is delimited by a newline
+of lines.
+A line is delimited by a newline
 .Ql \&\en
 character, an end-of-file
 .Pq Dv EOF
 character, or an end-of-line
 .Pq Dv EOL
-character.  See the
+character.
+See the
 .Sx "Special Characters"
-section for
-more information on
+section for more information on
 .Dv EOF
 and
 .Dv EOL .
 This means that a read request will
 not return until an entire line has been typed, or a signal has been
-received.  Also, no matter how many bytes are requested in the read call,
-at most one line is returned.  It is not, however, necessary to
+received.
+Also, no matter how many bytes are requested in the read call,
+at most one line is returned.
+It is not, however, necessary to
 read a whole line at once; any number of bytes, even one, may be
 requested in a read without losing information.
 .Pp
@@ -327,14 +355,16 @@ delimited by a newline
 .Dv EOF ,
 or
 .Dv EOL
-character.  This un-delimited
-data makes up the current line.  The
+character.
+This un-delimited data makes up the current line.
+The
 .Dv ERASE
-character deletes the last
-character in the current line, if there is any.  The
+character deletes the last character in the current line, if there is any.
+The
 .Dv KILL
 character
-deletes all data in the current line, if there is any.  The
+deletes all data in the current line, if there is any.
+The
 .Dv ERASE
 and
 .Dv KILL
@@ -347,7 +377,8 @@ characters themselves are not placed in the input
 queue.
 .Ss Noncanonical Mode Input Processing
 In noncanonical mode input processing, input bytes are not assembled into
-lines, and erase and kill processing does not occur.  The values of the
+lines, and erase and kill processing does not occur.
+The values of the
 .Dv VMIN
 and
 .Dv VTIME
@@ -364,12 +395,14 @@ function successfully returns.
 .Dv TIME
 is a timer of 0.1 second
 granularity that is used to time out bursty and short term data
-transmissions.  If
+transmissions.
+If
 .Dv MIN
 is greater than
 .Dv \&{ Dv MAX_INPUT Ns \&} ,
 the response to the
-request is undefined.  The four possible values for
+request is undefined.
+The four possible values for
 .Dv MIN
 and
 .Dv TIME
@@ -379,24 +412,29 @@ their interactions are described below.
 In this case
 .Dv TIME
 serves as an inter-byte timer and is activated after
-the first byte is received.  Since it is an inter-byte timer, it is reset
-after a byte is received.  The interaction between
+the first byte is received.
+Since it is an inter-byte timer, it is reset after a byte is received.
+The interaction between
 .Dv MIN
 and
 .Dv TIME
 is as
-follows:  as soon as one byte is received, the inter-byte timer is
-started.  If
+follows: as soon as one byte is received, the inter-byte timer is
+started.
+If
 .Dv MIN
 bytes are received before the inter-byte timer expires
 (remember that the timer is reset upon receipt of each byte), the read is
-satisfied.  If the timer expires before
+satisfied.
+If the timer expires before
 .Dv MIN
 bytes are received, the
-characters received to that point are returned to the user.  Note that if
+characters received to that point are returned to the user.
+Note that if
 .Dv TIME
 expires at least one byte is returned because the timer would
-not have been enabled unless a byte was received.  In this case
+not have been enabled unless a byte was received.
+In this case
 .Pf \&( Dv MIN
 > 0,
 .Dv TIME
@@ -405,8 +443,8 @@ not have been enabled unless a byte was received.  In this case
 and
 .Dv TIME
 mechanisms are
-activated by the receipt of the first byte, or a signal is received.  If
-data is in the buffer at the time of the
+activated by the receipt of the first byte, or a signal is received.
+If data is in the buffer at the time of the
 .Fn read ,
 the result is as
 if data had been received immediately after the
@@ -417,13 +455,14 @@ In this case, since the value of
 is zero, the timer plays no role
 and only
 .Dv MIN
-is significant.  A pending read is not satisfied until
+is significant.
+A pending read is not satisfied until
 .Dv MIN
 bytes are received (i.e., the pending read blocks until
 .Dv MIN
 bytes
-are received), or a signal is received.  A program that uses this case to
-read record-based terminal
+are received), or a signal is received.
+A program that uses this case to read record-based terminal
 .Dv I/O
 may block indefinitely in the read
 operation.
@@ -433,22 +472,26 @@ In this case, since
 = 0,
 .Dv TIME
 no longer represents an inter-byte
-timer.  It now serves as a read timer that is activated as soon as the
-read function is processed.  A read is satisfied as soon as a single
-byte is received or the read timer expires.  Note that in this case if
-the timer expires, no bytes are returned.  If the timer does not
+timer.
+It now serves as a read timer that is activated as soon as the
+read function is processed.
+A read is satisfied as soon as a single
+byte is received or the read timer expires.
+Note that in this case if the timer expires, no bytes are returned.
+If the timer does not
 expire, the only way the read can be satisfied is if a byte is received.
 In this case the read will not block indefinitely waiting for a byte; if
 no byte is received within
 .Dv TIME Ns *0.1
 seconds after the read is initiated,
-the read returns a value of zero, having read no data.  If data is
-in the buffer at the time of the read, the timer is started as if
+the read returns a value of zero, having read no data.
+If data is in the buffer at the time of the read, the timer is started as if
 data had been received immediately after the read.
 .Ss Case D: MIN = 0, TIME = 0
 The minimum of either the number of bytes requested or the number of
 bytes currently available is returned without waiting for more
-bytes to be input.  If no characters are available, read returns a
+bytes to be input.
+If no characters are available, read returns a
 value of zero, having read no data.
 .Ss Writing Data and Output Processing
 When a process writes one or more bytes to a terminal device file, they
@@ -456,8 +499,8 @@ are processed according to the
 .Fa c_oflag
 field (see the
 .Sx "Output Modes"
-section).  The
-implementation may provide a buffering mechanism; as such, when a call to
+section).
+The implementation may provide a buffering mechanism; as such, when a call to
 .Fn write
 completes, all of the bytes written have been scheduled for
 transmission to the device, but the transmission will not necessarily
@@ -474,11 +517,12 @@ Special character on input and is recognized if the
 .Dv ISIG
 flag (see the
 .Sx "Local Modes"
-section) is enabled.  Generates a
+section) is enabled.
+Generates a
 .Dv SIGINT
 signal which is sent to all processes in the foreground
-process group for which the terminal is the controlling
-terminal.  If
+process group for which the terminal is the controlling terminal.
+If
 .Dv ISIG
 is set, the
 .Dv INTR
@@ -487,11 +531,12 @@ discarded when processed.
 .It Dv QUIT
 Special character on input and is recognized if the
 .Dv ISIG
-flag is enabled.  Generates a
+flag is enabled.
+Generates a
 .Dv SIGQUIT
-signal which is
-sent to all processes in the foreground process group
-for which the terminal is the controlling terminal.  If
+signal which is sent to all processes in the foreground process group
+for which the terminal is the controlling terminal.
+If
 .Dv ISIG
 is set, the
 .Dv QUIT
@@ -500,8 +545,8 @@ processed.
 .It Dv ERASE
 Special character on input and is recognized if the
 .Dv ICANON
-flag is set.  Erases the last character in the
-current line; see
+flag is set.
+Erases the last character in the current line; see
 .Sx "Canonical Mode Input Processing" .
 It does not erase beyond
 the start of a line, as delimited by an
@@ -509,7 +554,8 @@ the start of a line, as delimited by an
 .Dv EOF ,
 or
 .Dv EOL
-character.  If
+character.
+If
 .Dv ICANON
 is set, the
 .Dv ERASE
@@ -518,13 +564,14 @@ discarded when processed.
 .It Dv KILL
 Special character on input and is recognized if the
 .Dv ICANON
-flag is set.  Deletes the entire line, as
-delimited by a
+flag is set.
+Deletes the entire line, as delimited by a
 .Dv NL ,
 .Dv EOF ,
 or
 .Dv EOL
-character.  If
+character.
+If
 .Dv ICANON
 is set, the
 .Dv KILL
@@ -532,17 +579,18 @@ character is discarded when processed.
 .It Dv EOF
 Special character on input and is recognized if the
 .Dv ICANON
-flag is set.  When received, all the bytes
-waiting to be read are immediately passed to the
+flag is set.
+When received, all the bytes waiting to be read are immediately passed to the
 process, without waiting for a newline, and the
 .Dv EOF
-is discarded.  Thus, if there are no bytes waiting (that
-is, the
+is discarded.
+Thus, if there are no bytes waiting (that is, the
 .Dv EOF
 occurred at the beginning of a line), a byte
 count of zero is returned from the
 .Fn read ,
-representing an end-of-file indication.  If
+representing an end-of-file indication.
+If
 .Dv ICANON
 is
 set, the
@@ -551,13 +599,14 @@ character is discarded when processed.
 .It Dv NL
 Special character on input and is recognized if the
 .Dv ICANON
-flag is set.  It is the line delimiter
+flag is set.
+It is the line delimiter
 .Ql \&\en .
 .It Dv EOL
 Special character on input and is recognized if the
 .Dv ICANON
-flag is set.  Is an additional line delimiter,
-like
+flag is set.
+Is an additional line delimiter, like
 .Dv NL .
 .It Dv SUSP
 If the
@@ -579,8 +628,9 @@ recognized if the
 (output control) or
 .Dv IXOFF
 (input
-control) flag is set.  Can be used to temporarily
-suspend output.  It is useful with fast terminals to
+control) flag is set.
+Can be used to temporarily suspend output.
+It is useful with fast terminals to
 prevent output from disappearing before it can be read.
 If
 .Dv IXON
@@ -595,10 +645,11 @@ recognized if the
 (output control) or
 .Dv IXOFF
 (input
-control) flag is set.  Can be used to resume output that
-has been suspended by a
+control) flag is set.
+Can be used to resume output that has been suspended by a
 .Dv STOP
-character.  If
+character.
+If
 .Dv IXON
 is set, the
 .Dv START
@@ -610,7 +661,8 @@ flag is set; it is the
 .Ql \&\er ,
 as denoted in the
 .Tn \&C
-Standard {2}.  When
+Standard {2}.
+When
 .Dv ICANON
 and
 .Dv ICRNL
@@ -632,17 +684,20 @@ termios.
 .It Dv EOL2
 Secondary
 .Dv EOL
-character.  Same function as
+character.
+Same function as
 .Dv EOL .
 .It Dv WERASE
 Special character on input and is recognized if the
 .Dv ICANON
-flag is set.  Erases the last word in the current
-line according to one of two algorithms.  If the
+flag is set.
+Erases the last word in the current line according to one of two algorithms.
+If the
 .Dv ALTWERASE
 flag is not set, first any preceding whitespace is
 erased, and then the maximal sequence of non-whitespace
-characters.  If
+characters.
+If
 .Dv ALTWERASE
 is set, first any preceding
 whitespace is erased, and then the maximal sequence
@@ -650,13 +705,13 @@ of alphabetic/underscores or non alphabetic/underscores.
 As a special case in this second algorithm, the first previous
 non-whitespace character is skipped in determining
 whether the preceding word is a sequence of
-alphabetic/underscores.  This sounds confusing but turns
-out to be quite practical.
+alphabetic/underscores.
+This sounds confusing but turns out to be quite practical.
 .It Dv REPRINT
 Special character on input and is recognized if the
 .Dv ICANON
-flag is set.  Causes the current input edit line
-to be retyped.
+flag is set.
+Causes the current input edit line to be retyped.
 .It Dv DSUSP
 Has similar actions to the
 .Dv SUSP
@@ -671,20 +726,21 @@ controlling terminal.
 .It Dv LNEXT
 Special character on input and is recognized if the
 .Dv IEXTEN
-flag is set.  Receipt of this character causes the next
-character to be taken literally.
+flag is set.
+Receipt of this character causes the next character to be taken literally.
 .It Dv DISCARD
 Special character on input and is recognized if the
 .Dv IEXTEN
-flag is set.  Receipt of this character toggles the flushing
-of terminal output.
+flag is set.
+Receipt of this character toggles the flushing of terminal output.
 .It Dv STATUS
 Special character on input and is recognized if the
 .Dv ICANON
-flag is set.  Receipt of this character causes a
+flag is set.
+Receipt of this character causes a
 .Dv SIGINFO
-signal to be sent to the foreground process group of the
-terminal.  Also, if the
+signal to be sent to the foreground process group of the terminal.
+Also, if the
 .Dv NOKERNINFO
 flag is not set, it
 causes the kernel to write a status message to the terminal
@@ -723,12 +779,14 @@ field for
 the terminal, the
 .Dv SIGHUP
 signal is sent to the controlling
-process associated with the terminal.  Unless other arrangements have
+process associated with the terminal.
+Unless other arrangements have
 been made, this causes the controlling process to terminate.
 Any subsequent call to the
 .Fn read
 function returns the value zero,
-indicating end of file.  Thus, processes that read a terminal
+indicating end of file.
+Thus, processes that read a terminal
 file and test for end-of-file can terminate appropriately after a
 disconnect.
 .\" If the
@@ -751,7 +809,8 @@ until the device is closed.
 .Sh General Terminal Interface
 .Ss Closing a Terminal Device File
 The last process to close a terminal device file causes any output
-to be sent to the device and any input to be discarded.  Then, if
+to be sent to the device and any input to be discarded.
+Then, if
 .Dv HUPCL
 is set in the control modes, and the communications port supports a
 disconnect function, the terminal device performs a disconnect.
@@ -762,8 +821,8 @@ characteristics
 do so by using the termios structure as defined in the header
 .In termios.h .
 This structure contains minimally four scalar elements of bit flags
-and one array of special characters.  The scalar flag elements are
-named:
+and one array of special characters.
+The scalar flag elements are named:
 .Fa c_iflag ,
 .Fa c_oflag ,
 .Fa c_cflag ,
@@ -811,16 +870,19 @@ following masks:
 .Pp
 In the context of asynchronous serial data transmission, a break
 condition is defined as a sequence of zero-valued bits that continues for
-more than the time to send one byte.  The entire sequence of zero-valued
+more than the time to send one byte.
+The entire sequence of zero-valued
 bits is interpreted as a single break condition, even if it continues for
-a time equivalent to more than one byte.  In contexts other than
+a time equivalent to more than one byte.
+In contexts other than
 asynchronous serial data transmission the definition of a break condition
 is implementation defined.
 .Pp
 If
 .Dv IGNBRK
 is set, a break condition detected on input is ignored, that
-is, not put on the input queue and therefore not read by any process.  If
+is, not put on the input queue and therefore not read by any process.
+If
 .Dv IGNBRK
 is not set and
 .Dv BRKINT
@@ -829,7 +891,8 @@ input and output queues and if the terminal is the controlling terminal
 of a foreground process group, the break condition generates a
 single
 .Dv SIGINT
-signal to that foreground process group.  If neither
+signal to that foreground process group.
+If neither
 .Dv IGNBRK
 nor
 .Dv BRKINT
@@ -861,7 +924,8 @@ X, where
 .Ql \&\e0
 is a two-character
 flag preceding each sequence and X is the data of the character received
-in error.  To avoid ambiguity in this case, if
+in error.
+To avoid ambiguity in this case, if
 .Dv ISTRIP
 is not set, a valid
 character of
@@ -880,11 +944,13 @@ break) is given to the application as a single character
 .Pp
 If
 .Dv INPCK
-is set, input parity checking is enabled.  If
+is set, input parity checking is enabled.
+If
 .Dv INPCK
 is not set,
 input parity checking is disabled, allowing output parity generation
-without input parity errors.  Note that whether input parity checking is
+without input parity errors.
+Note that whether input parity checking is
 enabled or disabled is independent of whether parity detection is enabled
 or disabled (see
 .Sx "Control Modes" ) .
@@ -904,12 +970,14 @@ is set, a received
 .Dv NL
 character is translated into a
 .Dv CR
-character.  If
+character.
+If
 .Dv IGNCR
 is set, a received
 .Dv CR
 character is ignored (not
-read).  If
+read).
+If
 .Dv IGNCR
 is not set and
 .Dv ICRNL
@@ -922,7 +990,8 @@ character.
 .Pp
 If
 .Dv IXON
-is set, start/stop output control is enabled.  A received
+is set, start/stop output control is enabled.
+A received
 .Dv STOP
 character suspends output and a received
 .Dv START
@@ -938,8 +1007,8 @@ is set,
 .Dv START
 and
 .Dv STOP
-characters are not
-read, but merely perform flow control functions.  When
+characters are not read, but merely perform flow control functions.
+When
 .Dv IXON
 is not set,
 the
@@ -950,8 +1019,8 @@ characters are read.
 .Pp
 If
 .Dv IXOFF
-is set, start/stop input control is enabled.  The system shall
-transmit one or more
+is set, start/stop input control is enabled.
+The system shall transmit one or more
 .Dv STOP
 characters, which are intended to cause the
 terminal device to stop transmitting data, as needed to prevent the input
@@ -962,10 +1031,11 @@ and shall transmit one or more
 characters, which are
 intended to cause the terminal device to resume transmitting data, as
 soon as the device can continue transmitting data without risk of
-overflowing the input queue.  The precise conditions under which
+overflowing the input queue.
+The precise conditions under which
 .Dv STOP
 and
-START
+.Dv START
 characters are transmitted are implementation defined.
 .Pp
 If
@@ -1088,8 +1158,8 @@ flow control of output */
 .Pp
 The
 .Dv CSIZE
-bits specify the byte size in bits for both transmission and
-reception.  The
+bits specify the byte size in bits for both transmission and reception.
+The
 .Fa c_cflag
 is masked with
 .Dv CSIZE
@@ -1100,17 +1170,18 @@ values
 .Dv CS7 ,
 or
 .Dv CS8 .
-This size does not include the parity bit, if any.  If
+This size does not include the parity bit, if any.
+If
 .Dv CSTOPB
-is set, two stop bits are used, otherwise one stop bit.  For example, at
-110 baud, two stop bits are normally used.
+is set, two stop bits are used, otherwise one stop bit.
+For example, at 110 baud, two stop bits are normally used.
 .Pp
 If
 .Dv CREAD
-is set, the receiver is enabled.  Otherwise, no character is
-received.
-Not all hardware supports this bit.  In fact, this flag
-is pretty silly and if it were not part of the
+is set, the receiver is enabled.
+Otherwise, no character is received.
+Not all hardware supports this bit.
+In fact, this flag is pretty silly and if it were not part of the
 .Nm
 specification
 it would be omitted.
@@ -1118,32 +1189,32 @@ it would be omitted.
 If
 .Dv PARENB
 is set, parity generation and detection are enabled and a parity
-bit is added to each character.  If parity is enabled,
+bit is added to each character.
+If parity is enabled,
 .Dv PARODD
-specifies
-odd parity if set, otherwise even parity is used.
+specifies odd parity if set, otherwise even parity is used.
 .Pp
 If
 .Dv HUPCL
 is set, the modem control lines for the port are lowered
 when the last process with the port open closes the port or the process
-terminates.  The modem connection is broken.
+terminates.
+The modem connection is broken.
 .Pp
 If
 .Dv CLOCAL
 is set, a connection does not depend on the state of the modem
-status lines.  If
+status lines.
+If
 .Dv CLOCAL
-is clear, the modem status lines are
-monitored.
+is clear, the modem status lines are monitored.
 .Pp
 Under normal circumstances, a call to the
 .Fn open
-function waits for
-the modem connection to complete.  However, if the
+function waits for the modem connection to complete.
+However, if the
 .Dv O_NONBLOCK
-flag is set
-or if
+flag is set or if
 .Dv CLOCAL
 has been set, the
 .Fn open
@@ -1226,7 +1297,8 @@ and
 .Pp
 If
 .Dv ECHO
-is set, input characters are echoed back to the terminal.  If
+is set, input characters are echoed back to the terminal.
+If
 .Dv ECHO
 is not set, input characters are not echoed.
 .Pp
@@ -1238,7 +1310,8 @@ are set, the
 .Dv ERASE
 character causes the terminal
 to erase the last character in the current line from the display, if
-possible.  If there is no character to erase, an implementation may echo
+possible.
+If there is no character to erase, an implementation may echo
 an indication that this was the case or do nothing.
 .Pp
 If
@@ -1300,7 +1373,8 @@ is not set.
 .Pp
 If
 .Dv ICANON
-is set, canonical processing is enabled.  This enables the
+is set, canonical processing is enabled.
+This enables the
 erase and kill edit functions, and the assembly of input characters into
 lines delimited by
 .Dv NL ,
@@ -1312,14 +1386,15 @@ as described in
 .Pp
 If
 .Dv ICANON
-is not set, read requests are satisfied directly from the input
-queue.  A read is not satisfied until at least
+is not set, read requests are satisfied directly from the input queue.
+A read is not satisfied until at least
 .Dv MIN
 bytes have been
 received or the timeout value
 .Dv TIME
-expired between bytes.  The time value
-represents tenths of seconds.  See
+expired between bytes.
+The time value represents tenths of seconds.
+See
 .Sx "Noncanonical Mode Input Processing"
 for more details.
 .Pp
@@ -1331,20 +1406,20 @@ control characters
 .Dv QUIT ,
 and
 .Dv SUSP
-(job control only).  If an input
-character matches one of these control characters, the function
-associated with that character is performed.  If
+(job control only).
+If an input character matches one of these control characters, the function
+associated with that character is performed.
+If
 .Dv ISIG
-is not set, no
-checking is done.  Thus these special input functions are possible only
-if
+is not set, no checking is done.
+Thus these special input functions are possible only if
 .Dv ISIG
 is set.
 .Pp
 If
 .Dv IEXTEN
-is set, implementation-defined functions are recognized
-from the input data.  How
+is set, implementation-defined functions are recognized from the input data.
+How
 .Dv IEXTEN
 being set
 interacts with
@@ -1382,9 +1457,11 @@ is set, the signal
 .Dv SIGTTOU
 is sent to the process group of a process that tries to write to
 its controlling terminal if it is not in the foreground process group for
-that terminal.  This signal, by default, stops the members of the process
-group.  Otherwise, the output generated by that process is output to the
-current output stream.  Processes that are blocking or ignoring
+that terminal.
+This signal, by default, stops the members of the process group.
+Otherwise, the output generated by that process is output to the
+current output stream.
+Processes that are blocking or ignoring
 .Dv SIGTTOU
 signals are excepted and allowed to produce output and the
 .Dv SIGTTOU
@@ -1402,8 +1479,8 @@ characters (see
 The special control characters values are defined by the array
 .Fa c_cc .
 This table lists the array index, the corresponding special character,
-and the system default value.  For an accurate list of
-the system defaults, consult the header file
+and the system default value.
+For an accurate list of the system defaults, consult the header file
 .In sys/ttydefaults.h .
 .Pp
 .Bl -column "Index Name" "Special Character" -offset indent -compact
